--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Global font link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,8 +30,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/abhi5hek001/">Linkedin</a></li>
+                <li><a href="https://github.com/abhi5hek001">Github</a></li>
             </ul>
         </nav>
     </header>
